--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "@mapbox/react-native-mapbox-gl": "^6.1.3",
     "axios": "^0.18.0",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-gesture-handler": "^1.2.1",
+    "react-native-maps": "^0.24.2",
     "react-navigation": "^3.11.0",
     "styled-components": "^4.2.0"
   },
